@@ -20,9 +20,7 @@
     <script type="text/javascript" src="form.js"></script>
 </head>
 <body>
-<header>
-    <p class="logo"><img src="../images/logo_t-100.png" alt=""></p>
-</header>
+<header data-im-include="page_header.html"></header>
 <div id="nonsupportmessage">
     <div>
         If you see this, you must use any unsupported web browser.<br>
@@ -154,8 +152,6 @@
     </table>
     <!--<button onclick="INTERMediator.saveRecordFromNavi()">Save</button>-->
 </div>
-<footer>
-    <small>INTER-Mediator ©2024</small>
-</footer>
+<footer data-im-include="include:page_footer"></footer>
 </body>
 </html>
